--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="main-padding">
-      <div class="title">Kim Soyoung</div>
-      <div class="project-menu">
-        project
-      </div>
+    <header>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+          <li><a href="./project.html">project</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="landing">
       <div class="top">
