--- a/project.html
+++ b/project.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="main-padding">
-      <div class="title">Kim Soyoung</div>
-      <div class="project-menu">
-        project
-      </div>
+    <header>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+          <li><a href="./project.html">project</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="project-landing">
       <div class="project-landing-top">
-        <a href="./projectDetail.html" class="project-image"
-          >project image here</a
-        >
+        <a href="./projectDetail.html" class="project-image"></a>
       </div>
       <div class="project-landing-bottom">
         <div class="project-title">
           <span class="project-number">01</span>
-          project title
+          <h1>portfolio</h1>
         </div>
         <div class="project-count">
           <span class="project-now-num">01</span>
@@ -32,5 +32,6 @@
         </div>
       </div>
     </main>
+    <script src="./project.js"></script>
   </body>
 </html>
