--- a/projectDetail.html
+++ b/projectDetail.html
@@ -8,12 +8,48 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="main-padding">
-      <div class="title">Kim Soyoung</div>
-      <div class="project-menu">
-        project
-      </div>
+    <header>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+          <li><a href="./project.html">project</a></li>
+        </ul>
+      </nav>
     </header>
-    <main></main>
+    <main class="project-detail-main">
+      <h1 class="project-title">Portfolio</h1>
+      <p>프로젝트 나열에 중심을 둔 심플한 포트폴리오 사이트입니다.</p>
+      <img
+        class="preview-image"
+        src="./asset/image/preview.png"
+        alt=""
+        class="preview-image"
+      />
+      <article class="margin-bottom">
+        <h2 class="project-detail-title">skill</h2>
+        <ul class="skill-list">
+          <li class="skill">html</li>
+          <li class="skill">css</li>
+          <li class="skill">js</li>
+          <li class="skill">react</li>
+        </ul>
+      </article>
+      <article class="margin-bottom">
+        <h2 class="project-detail-title">duration</h2>
+        <p>2021.05.01 - 2021. 05.31</p>
+      </article>
+      <article class="margin-bottom">
+        <h2 class="project-detail-title">demo</h2>
+        <a href="#">demo site address</a>
+      </article>
+      <article class="margin-bottom">
+        <h2 class="project-detail-title">description</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat illo
+          autem eos dolor, hic animi atque veritatis? Facilis architecto vero
+          sint labore? Beatae dolores laudantium odio non, modi est quisquam.
+        </p>
+      </article>
+    </main>
   </body>
 </html>
