modify project layout

--- a/project.html
+++ b/project.html
@@ -16,20 +16,35 @@
         </ul>
       </nav>
     </header>
-    <main class="project-landing">
-      <div class="project-landing-top">
-        <a href="./projectDetail.html" class="project-image"></a>
-      </div>
-      <div class="project-landing-bottom">
-        <div class="project-title">
-          <span class="project-number">01</span>
-          <h1>portfolio</h1>
-        </div>
-        <div class="project-count">
-          <span class="project-now-num">01</span>
-          <span class="line"></span>
-          <span class="project-all-num">05</span>
-        </div>
+    <main class="project-main">
+      <div class="project-container">
+        <article class="project" data-number="01">
+          <img
+            class="project-representative-image"
+            src="./asset/image/image1.jpg"
+            alt=""
+          />
+          <h1 class="title">Portfolio</h1>
+        </article>
+        <article class="project" data-number="02">
+          <img
+            class="project-representative-image"
+            src="./asset/image/image2.jpg"
+            alt=""
+          />
+          <h1 class="title">
+            Nature with<br />
+            the sun
+          </h1>
+        </article>
+        <article class="project" data-number="03">
+          <img
+            class="project-representative-image"
+            src="./asset/image/image3.jpg"
+            alt=""
+          />
+          <h1 class="title">Recycling</h1>
+        </article>
       </div>
     </main>
     <script src="./project.js"></script>
