--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="background"></div>
     <header>
       <nav>
-        <ul class="nav-list">
-          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+        <ul class="header-menu-list">
+          <li><a href="./index.html">Kim Soyoung</a></li>
           <li><a href="./project.html">project</a></li>
         </ul>
       </nav>
     </header>
-    <main class="landing">
-      <div class="top">
-        <div class="container">
-          <h1 class="main-title">
-            i'm a<br />
-            front-end<br />
-            developer
-          </h1>
-          <div class="contact">
-            <img src="./asset/image/github.svg" alt="github" />
-            <img src="./asset/image/mail.svg" alt="mail address" />
-            <img src="./asset/image/kakaotalk.svg" alt="kakaotalk id" />
-          </div>
-          <a href="./project.html">View project</a>
+    <main class="landing-main-page">
+      <div class="introduce-container">
+        <h1 class="introduce">
+          I'm a<br />
+          front-end<br />
+          developer.
+        </h1>
+      </div>
+      <div class="introduce-more-container">
+        <div class="introduce-more">
+          제가 코딩한 내용이 직관적으로 웹 브라우저에 보이는 점이 매력적으로
+          다가와서 프론트엔드를 공부하게 되었습니다. 저의 목표는 사용자들을
+          오래동안 잡아둘 수 있는 매력적인 웹사이트를 만드는 것입니다 그리고
+          남녀노소 사용하기 편리한 웹사이트를 만들고 싶습니다.
         </div>
       </div>
-      <div class="bottom">
-        <div class="me"></div>
-      </div>
+      <div class="introduce-more-badge">more</div>
     </main>
     <script src="./app.js"></script>
   </body>
