--- a/project.html
+++ b/project.html
@@ -11,27 +11,33 @@
     <header>
       <nav>
         <ul class="nav-list">
-          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+          <li><a href="./index.html" class="portfolio-name">Portfolio</a></li>
           <li><a href="./project.html">project</a></li>
         </ul>
       </nav>
     </header>
-    <main class="project-main">
+    <main>
       <div class="project-container">
         <article class="project" data-number="01">
-          <img
-            class="project-representative-image"
-            src="./asset/image/image1.jpg"
-            alt=""
-          />
+          <a href="./projectDetail.html">
+            <img
+              class="project-representative-image"
+              src="./asset/image/image1.jpg"
+              alt=""
+              data-number="1"
+          /></a>
           <h1 class="title">Portfolio</h1>
         </article>
         <article class="project" data-number="02">
-          <img
-            class="project-representative-image"
-            src="./asset/image/image2.jpg"
-            alt=""
-          />
+          <a href="./projectDetail.html">
+            <img
+              class="project-representative-image"
+              src="./asset/image/image2.jpg"
+              alt=""
+              data-number="2"
+            />
+          </a>
+
           <h1 class="title">
             Nature with<br />
             the sun
@@ -42,7 +48,9 @@
             class="project-representative-image"
             src="./asset/image/image3.jpg"
             alt=""
+            data-number="3"
           />
+
           <h1 class="title">Recycling</h1>
         </article>
       </div>
