--- a/projectDetail.html
+++ b/projectDetail.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul class="nav-list">
-          <li><a href="./index.html" class="portfolio-name">Kim Soyoung</a></li>
+          <li><a href="./index.html" class="portfolio-name">Portfolio</a></li>
           <li><a href="./project.html">project</a></li>
         </ul>
       </nav>
@@ -51,5 +51,6 @@
         </p>
       </article>
     </main>
+    <script src="./projectDetail.js"></script>
   </body>
 </html>
